--- a/view/zfecommerce/admin/user/register.phtml
+++ b/view/zfecommerce/admin/user/register.phtml
@@ -1,23 +1,57 @@
 <?php
 
-$form = $this->form;
-$form->setAttribute('action', $this->url(
-    'user/process',
-    array(
-        'action'     => 'register',
-    )
-));
+$title = 'Add new user';
+$this->headTitle($title);
+?>
+    <h1><?= $this->escapeHtml($title) ?></h1>
+<?php
+// This provides a default CSS class and placeholder text for the email element:
+$email = $form->get('email');
+$email->setAttribute('class', 'form-control');
+$email->setAttribute('placeholder', 'Email Address');
+
+// This provides a default CSS class for the password element:
+$password = $form->get('password');
+$password->setAttribute('class', 'form-control');
+$password->setAttribute('placeholder', 'Password');
+
+// This provides a default CSS class for the password element:
+$password2 = $form->get('password2');
+$password2->setAttribute('class', 'form-control');
+$password2->setAttribute('placeholder', 'Password Confirmation');
+
+// This provides CSS classes for the submit button:
+$submit = $form->get('submit');
+$submit->setAttribute('class', 'btn btn-primary');
+
+$form->setAttribute('action', $this->url(null, array('action' => 'register', 'controller' => 'user')));
 $form->prepare();
 
 echo $this->form()->openTag($form);
-echo $this->formCollection($form);
+?>
+<?php // Wrap the elements in divs marked as form groups, and render the
+// label, element, and errors separately within ?>
+    <div class="form-group">
+        <?= $this->formLabel($email) ?>
+        <?= $this->formElement($email) ?>
+        <?= $this->formElementErrors()->render($email, ['class' => 'help-block']) ?>
+    </div>
+
+    <div class="form-group">
+        <?= $this->formLabel($password) ?>
+        <?= $this->formElement($password) ?>
+        <?= $this->formElementErrors()->render($password, ['class' => 'help-block']) ?>
+    </div>
+
+    <div class="form-group">
+        <?= $this->formLabel($password2) ?>
+        <?= $this->formElement($password2) ?>
+        <?= $this->formElementErrors()->render($password2, ['class' => 'help-block']) ?>
+    </div>
+
+<?php
+echo $this->formSubmit($submit);
+echo $this->formHidden($form->get('user_id'));
+echo $this->formHidden($form->get('is_active'));
 echo $this->form()->closeTag();
 
-if ($this->messages){
-    echo '<ul>';
-    foreach($this->messages as $message)
-    {
-        echo '<li>'.$message.'</li>';
-    }
-    echo '</ul>';
-}
